@@ -419,6 +419,101 @@ store a into 'pig_hcat_barrier_2' using org.apache.hcatalog.pig.HCatStorer('b=1'
                                 ,'expected_err_regex' => 'not supported'
                                 },
                         ],
-                }, # end g
+                },{
+                        'name' => 'Pig_Complex',
+                        'tests' => [
+                                {
+                                 # test reading tuples from the complex table
+                                 'num' => 1 
+                                ,'pig' => q\
+a = load 'studentcomplextab10k' using org.apache.hcatalog.pig.HCatLoader();
+b = foreach a generate flatten(s); 
+store b into ':OUTPATH:';\,
+				                ,'sql'   => q\select IFNULL(name, ""), IFNULL(age, ""), IFNULL(gpa, "") from studentcomplextab10k;\
+                                ,'floatpostprocess' => 1
+                                ,'delimiter' => '	'
+                                },{
+                                 # test reading maps from the complex table
+                                 'num' => 2 
+                                ,'pig' => q\
+a = load 'studentcomplextab10k' using org.apache.hcatalog.pig.HCatLoader();
+b = foreach a generate s.name as n1, m#'name' as n2;
+c = filter b by n1 != '' and n2 is not null;
+store c into ':OUTPATH:';\,
+				                ,'sql'   => q\select t.name, m.mvalue
+                                              from studentcomplextab10k t, studentcomplextab10k_map m
+                                              where t.id = m.tid and t.name is not null and m.mkey = 'name';\
+                                ,'floatpostprocess' => 1
+                                ,'delimiter' => '	'
+                                },{
+                                 # test reading arrays from the complex table
+                                 'num' => 3 
+                                ,'pig' => q\
+a = load 'studentcomplextab10k' using org.apache.hcatalog.pig.HCatLoader();
+b = foreach a generate s.name as n1, flatten(a);
+c = filter b by n1 != '' ;
+store c into ':OUTPATH:';\,
+				                ,'sql'   => q\select t.name, m.lvalue
+                                              from studentcomplextab10k t, studentcomplextab10k_list m
+                                              where t.id = m.tid and t.name is not null;\
+                                ,'floatpostprocess' => 1
+                                ,'delimiter' => '	'
+                                },{
+                                 # test writing tuples to a complex table.  This also tests reading with default separators.
+                                 'num' => 4 
+                                 ,'notmq' => 1
+                                ,'hcat_prep'=>q\drop table if exists pig_complex_4;
+create table pig_complex_4 (s struct<name: string, age: int, gpa: double>) STORED AS TEXTFILE;\
+                                ,'pig' => q\
+a = load 'studenttab10k' using org.apache.hcatalog.pig.HCatLoader();
+b = foreach a generate TOTUPLE(name, age, gpa) as s;
+store b into 'pig_complex_4' using org.apache.hcatalog.pig.HCatStorer();
+exec;
+c = load 'pig_complex_4' using org.apache.hcatalog.pig.HCatLoader();
+d = foreach c generate flatten(s);
+store d into ':OUTPATH:';\
+				                ,'sql'   => q\select name, age, gpa from studenttab10k;\
+                                ,'floatpostprocess' => 1
+                                ,'delimiter' => '	'
+                                },{
+                                 # test writing maps to a complex table.  This also tests reading with default separators.
+                                 'num' => 5 
+                                 ,'notmq' => 1
+                                ,'hcat_prep'=>q\drop table if exists pig_complex_5;
+create table pig_complex_5 (m map<string, string>) STORED AS TEXTFILE;\
+                                ,'pig' => q\
+a = load 'studenttab10k' using org.apache.hcatalog.pig.HCatLoader();
+b = foreach a generate TOMAP('name', name, 'age', (chararray)age, 'gpa', (chararray)gpa) as m;
+store b into 'pig_complex_5' using org.apache.hcatalog.pig.HCatStorer();
+exec;
+c = load 'pig_complex_5' using org.apache.hcatalog.pig.HCatLoader();
+d = foreach c generate m#'name', m#'age', m#'gpa';
+store d into ':OUTPATH:';\
+				                ,'sql'   => q\select name, age, gpa from studenttab10k;\
+                                ,'floatpostprocess' => 1
+                                ,'delimiter' => '	'
+                                }, {
+                                 # test writing bags to a complex table.  This also tests reading with default separators.
+                                 'num' => 6 
+                                 ,'notmq' => 1
+                                ,'hcat_prep'=>q\drop table if exists pig_complex_6;
+create table pig_complex_6 (a array<string>) STORED AS TEXTFILE;\
+                                ,'pig' => q\
+a = load 'studenttab10k' using org.apache.hcatalog.pig.HCatLoader();
+b = foreach a generate name;
+c = distinct b;
+d = group c all;
+e = foreach d generate $1 as a;
+store e into 'pig_complex_6' using org.apache.hcatalog.pig.HCatStorer();
+exec;
+f = load 'pig_complex_6' using org.apache.hcatalog.pig.HCatLoader();
+g = foreach f generate flatten(a);
+store g into ':OUTPATH:';\
+				                ,'sql'   => q\select distinct name from studenttab10k;\
+                                ,'floatpostprocess' => 1
+                                ,'delimiter' => '	'
+                                }
+                        ],
+                } # end g
          ]
 }
